--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@ body {
     padding: 0;
 }
 
+#main {
+    max-width: 1600px;
+    margin: 0 auto;
+}
+
 button {
     transition: scale 0.5s ease;
     border: none;
